--- a/README
+++ b/README
@@ -14,6 +14,13 @@ grant_type:client_credentials
 resource:https://storage.azure.com/
 client_id: <client id>
 client_secret:<client secret>
+
+Or https://login.microsoftonline.com/<tenant id>/oauth2/v2.0/token
+Form Data Fields
+grant_type:client_credentials
+scope:https://storage.azure.com/.default
+client_id: <client id>
+client_secret:<client secret>
  
  
  2. Storage Gen Purpose V1(Container) REST API
