--- a/README
+++ b/README
@@ -30,7 +30,7 @@ client_secret:<client secret>
  https://docs.microsoft.com/en-us/rest/api/datalakestore/webhdfs-filesystem-apis
  
  
- 3. Storage Gen Purpose V2(File System) REST API
+ 3 & $ Storage Gen Purpose V2(File System) REST API
  https://docs.microsoft.com/en-us/rest/api/storageservices/data-lake-storage-gen2
  
  Use either version of OAuth version API token 
